@@ -85,6 +85,11 @@
                     <skip>true</skip>
                     <source>11</source>
                     <target>11</target>
+                    <compilerArgs>
+                        <!-- 添加模块打开选项 -->
+                        <arg>--add-modules</arg>
+                        <arg>jdk.compiler</arg>
+                    </compilerArgs>
                     <!--                    <annotationProcessorPaths>-->
                     <!--                        <path>-->
                     <!--                            <groupId>org.projectlombok</groupId>-->
